--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root">Loading…</div>
+    <script>document.getElementById('root').innerHTML='<p style="padding:20px;font-size:20px">HTML ok</p>';</script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
